create place order

--- a/src/main/resources/view/place_order_form.fxml
+++ b/src/main/resources/view/place_order_form.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="603.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.placeholder.PlaceOrderFormController">
+<AnchorPane prefHeight="603.0" prefWidth="998.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.order.PlaceOrderFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#192a56" height="116.0" layoutY="-9.0" stroke="BLACK" strokeType="INSIDE" width="998.0" />
       <Label layoutX="470.0" layoutY="34.0" text="Place Holder Form" textFill="WHITE">
